--- a/javaStudy/workspace_html/css_02/ex04.html
+++ b/javaStudy/workspace_html/css_02/ex04.html
@@ -1,105 +1,103 @@
 <!DOCTYPE html>
 
 <html lang="ko">
-    
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>css_ex04</title>
 
     <style>
-        table {
-            border-collapse: collapse;
-            text-align: center;
-        }
+      table {
+        border-collapse: collapse;
+        text-align: center;
+      }
 
-        table > thead {
-            background: #ffadad;
-        }
+      table > thead {
+        background: #ffadad;
+      }
 
-        table > tbody > tr:hover {
-            background: #fff2a8;
-        }
+      table > tbody > tr:hover {
+        background: #fff2a8;
+      }
 
-        table > thead > tr > th,
-        table > tbody > tr > td {
-            border: 1px solid #aaa;
-        }
+      table > thead > tr > th,
+      table > tbody > tr > td {
+        border: 1px solid #aaa;
+      }
 
-        .text-left {
-            text-align: left;
-        }
+      .text-left {
+        text-align: left;
+      }
     </style>
-</head>
+  </head>
 
-<body>
-    <h1>MySite</h1>
+  <body>
+    <h1>ImSeoyeong</h1>
     <h2>게시판</h2>
     <h3>일반게시판</h3>
     <h4>리스트</h4>
 
     <table>
-        <colgroup>
-            <col style="width: 50px;">
-            <col style="width: 300px;">
-            <col style="width: 80px;">
-            <col style="width: 80px;">
-            <col style="width: 100px;">
-            <col style="width: 50px;">
-        </colgroup>
-        <thead>
-            <tr>
-                <th>번호</th>
-                <th>제목</th>
-                <th>글쓴이</th>
-                <th>조회수</th>
-                <th>작성일</th>
-                <th>관리</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>123</td>
-                <td class="text-left">게시글 제목입니다.</td>
-                <td>홍길동</td>
-                <td>1234</td>
-                <td>2025-02-25</td>
-                <td>삭제</td>
-            </tr>
-            <tr>
-                <td>123</td>
-                <td class="text-left">게시글 제목입니다.</td>
-                <td>홍길동</td>
-                <td>1234</td>
-                <td>2025-02-25</td>
-                <td>삭제</td>
-            </tr>
-            <tr>
-                <td>123</td>
-                <td class="text-left">게시글 제목입니다.</td>
-                <td>홍길동</td>
-                <td>1234</td>
-                <td>2025-02-25</td>
-                <td>삭제</td>
-            </tr>
-            <tr>
-                <td>123</td>
-                <td class="text-left">게시글 제목입니다.</td>
-                <td>홍길동</td>
-                <td>1234</td>
-                <td>2025-02-25</td>
-                <td>삭제</td>
-            </tr>
-            <tr>
-                <td>123</td>
-                <td class="text-left">게시글 제목입니다.</td>
-                <td>홍길동</td>
-                <td>1234</td>
-                <td>2025-02-25</td>
-                <td>삭제</td>
-            </tr>
-        </tbody>
+      <colgroup>
+        <col style="width: 50px" />
+        <col style="width: 300px" />
+        <col style="width: 80px" />
+        <col style="width: 80px" />
+        <col style="width: 100px" />
+        <col style="width: 50px" />
+      </colgroup>
+      <thead>
+        <tr>
+          <th>번호</th>
+          <th>제목</th>
+          <th>글쓴이</th>
+          <th>조회수</th>
+          <th>작성일</th>
+          <th>관리</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>123</td>
+          <td class="text-left">게시글 제목입니다.</td>
+          <td>홍길동</td>
+          <td>1234</td>
+          <td>2025-02-25</td>
+          <td>삭제</td>
+        </tr>
+        <tr>
+          <td>123</td>
+          <td class="text-left">게시글 제목입니다.</td>
+          <td>홍길동</td>
+          <td>1234</td>
+          <td>2025-02-25</td>
+          <td>삭제</td>
+        </tr>
+        <tr>
+          <td>123</td>
+          <td class="text-left">게시글 제목입니다.</td>
+          <td>홍길동</td>
+          <td>1234</td>
+          <td>2025-02-25</td>
+          <td>삭제</td>
+        </tr>
+        <tr>
+          <td>123</td>
+          <td class="text-left">게시글 제목입니다.</td>
+          <td>홍길동</td>
+          <td>1234</td>
+          <td>2025-02-25</td>
+          <td>삭제</td>
+        </tr>
+        <tr>
+          <td>123</td>
+          <td class="text-left">게시글 제목입니다.</td>
+          <td>홍길동</td>
+          <td>1234</td>
+          <td>2025-02-25</td>
+          <td>삭제</td>
+        </tr>
+      </tbody>
     </table>
-</body>
-
+  </body>
 </html>
