--- a/javaStudy/Javascript/example/ifelse_02.html
+++ b/javaStudy/Javascript/example/ifelse_02.html
@@ -26,16 +26,15 @@
     // }
 
     //ex3) - ex2랑 결과값 같음
-    let name = prompt("이름을 입력하세요");
-    let age = parseInt(prompt("나이를 입력하세요"));
-    let adult = null;
-    if (age >= 20) {
-      adult = "성인"
-    } else {
-      adult = "미성년"
-    }
-    document.write(name + "님은 " + adult + "입니다.");
-
+    // let name = prompt("이름을 입력하세요");
+    // let age = parseInt(prompt("나이를 입력하세요"));
+    // let adult = null;
+    // if (age >= 20) {
+    //   adult = "성인"
+    // } else {
+    //   adult = "미성년"
+    // }
+    // document.write(name + "님은 " + adult + "입니다.");
   </script>
 </body>
 </html>
