--- a/javaStudy/Javascript/Study/multiif_01.html
+++ b/javaStudy/Javascript/Study/multiif_01.html
@@ -33,14 +33,26 @@
       
       if (deposit >= 500000) {
         document.write("큰 금액을 입금하셨습니다. 알뜰하게 사용하세요.");
-      } else if (deposit >= 100000 || deposit < 500000) { //이상함
+      } else if (deposit >= 100000 && deposit < 500000) {
         document.write("적당한 금액을 입금하셨습니다.");
       } else {
         document.write("조금만 더 저축하는 건 어떨까요?");
       }
-    }
+    } else if (select === "출금") {
+      let withdraw = parseInt(prompt("출금할 금액을 입력하세요."));
 
-    document.write("타이틀: " + num + "<br>");
+      if (withdraw <= 0) {
+        document.write("금액 입력이 잘못되었습니다.");
+      } else if (withdraw > account) {
+        document.write("잔액이 부족합니다.");
+      } else if (withdraw >= 50000) {
+        document.write("큰 금액을 인출하셨습니다. 돈 아끼세요.");
+      } else if (withdraw < 50000) {
+        document.write("적은 금액을 인출하셨습니다.");
+      }
+    } else {
+      document.write("잘못 입력했습니다.");
+    }
 
     // -------------------------------------------------------------------
     // [과정]
@@ -57,7 +69,7 @@
 
 
     // [error]
-    // 1. 내용
+    // 1.
 
 
     // [noti]
