--- a/javaStudy/Javascript/Study/for_01.html
+++ b/javaStudy/Javascript/Study/for_01.html
@@ -20,7 +20,7 @@
       for (let i=1; i<=num; i++) {
         if (i%3===0 || i%5===0) {
           lastNum = i;
-        } 
+        }
       }
 
       for (let i=1; i<=num; i++) {
@@ -39,6 +39,7 @@
     // [과정]
     // 1. sum 초기화 
     // 2. 숫자 입력 받기
+    // 3. 3의 배수거나 5의 배수의 총 합을 구하라?.......
 
 
     // [error]
