--- a/javaStudy/Javascript/example/while_01.html
+++ b/javaStudy/Javascript/example/while_01.html
@@ -78,7 +78,7 @@
       number++; 
 
       if (number%2 === 0) {
-        evenSum = evenSum + number;
+        evenSum = evenSum + number; //evenSum += number; 복합연산자. 이렇게 써도 됨.
       } else {
         oddSum = oddSum + number;
       }
