--- a/javaStudy/Javascript/example/for_06.html
+++ b/javaStudy/Javascript/example/for_06.html
@@ -20,9 +20,10 @@
         for (let i=2; i<=100; i++) {
             let isPrime = 1; //true(1)로 우선 설정
 
-            for (let j=2; j<i; j++) {
+            for (let j=2; j*j<=i; j++) { //제곱근까지만 검사, j의 제곱이 i보다 작거나 같을 때까지만 반복 
                 if (i%j === 0) { //만약 i가 j로 나누어 떨어지면 약수가 하나 더 있다는 뜻.
                     isPrime = 0; //소수가 아니므로 false(0)으로 변경.
+                    break; //소수가 아니면 더 검사할 필요 없음.
                 }
             }
             
@@ -34,7 +35,7 @@
         // -------------------------------------------------------------------
         // [코드 요약]
         // 1. isPrime을 1(true)로 설정해놓고
-        // 2. 2부터 i-1까지 나누어지는지 검사. j<i 부분이 i-1까지 나누어보는 부분.
+        // 2. i의 제곱근까지만 나누어지는지 검사. (j*j<=i;) <- 이 부분
         // 3. 한 번이라도 나누어 떨어지면 isPrime=0 즉 false가 되면 소수가 아닌 것이다!!!
         // 4. 그리고나서 isPrime이 1(true)라면 count가 증가 (소수 개수를 카운트)
 
