--- a/javaStudy/Javascript/example/function_02.html
+++ b/javaStudy/Javascript/example/function_02.html
@@ -53,6 +53,8 @@
         // - str.length-1 : index는 0부터 시작한다. abc는 3글자고 3-1=2 / 인덱스 0, 1, 2 해서 3글자가 된다.
         // - 그래서 i는 2부터 시작해서 감소한다.
         // - result = result + str[i] : 2, 1, 0 순으로 반복
+
+        //- abc 자리에 숫자를 넣는건 안됨. 왜냐면 숫자는 length란 개념이 없기 때문
     </script>
   </body>
 </html>
