--- a/javaStudy/Javascript/layout.html
+++ b/javaStudy/Javascript/layout.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript : 파일명</title>
-  </head>
-  <body>
+</head>
+<body>
     <script>
         // [문제의 조건]
         // 문제의 내용 적기
@@ -15,9 +15,6 @@
         // -------------------------------------------------------------------
 
         let number = 0;
-        let text = parseInt(prompt("내용"));
-
-        document.write("타이틀: " + number);
 
         // -------------------------------------------------------------------
         // [과정]
@@ -40,5 +37,5 @@
 
         // -------------------------------------------------------------------
     </script>
-  </body>
+</body>
 </html>
