--- a/javaStudy/Javascript/example/customObject_04.html
+++ b/javaStudy/Javascript/example/customObject_04.html
@@ -16,39 +16,34 @@
 
         const student = {
             name: "imseoyeong",
-            number: 20162722,
-            score: 80,
-            grade: [],
-
-            getGrade(score) {
-           
+            id: 20162722,
+            scores: [],
+            addScore(score) {
+                this.scores.push(score);
+                console.log(`${score.subject} ${score.score}점 입력`);
             },
+            getTotal() {
+                let sum = 0;
+                for (let s of this.scores) { //scores를 s에 저장한다?
+                    sum += s.score;
+                }
+                return sum;
+            },
+            getAverage() {
+                let sum = this.getTotal();
 
-            // getGrade(result) {
-            //     let num = Math.floor(result/10);
-
-            //     switch (num) {
-            //     case 10:
-            //     case 9:
-            //         return "A";
-            //     case 8:
-            //         return "B";
-            //     case 7:
-            //         return "C";
-            //     case 6:
-            //         return "D";
-            //     }
-
-            //     this.grade.push();
-            // },
-            result() {
-                document.write(`${this.number} ${this.name}님의 점수는 ${this.score}점 ${this.grade}등급 입니다.<br>`);
-            }
+                let avg = sum / this.scores.length; //점수가 몇 개인지 알 수 있다.
+                return avg;
+            },
         }
 
-        student.getGrade();
-        student.result();
+        student.addScore({subject: "javaScript", score: 85});
+        student.addScore({subject: "html", score: 95});
+        student.addScore({subject: "css", score: 75});
+        student.addScore({subject: "java", score: 85});
 
+        document.write("점수 총합: " + student.getTotal() + "점<br>");
+        document.write("평균: " + student.getAverage() + "점");
 
         // -------------------------------------------------------------------
         // [noti]
